--- a/style.css
+++ b/style.css
@@ -163,10 +163,11 @@ html body{
   border-radius: 10px;
   background: radial-gradient(farthest-corner at top,
    rgba(215,248,247,.5) 0%,
-   rgba(190,228,210,.5) 5.25%,
-   rgba(250,178,172,.6) 15.25%,
-   rgba(237, 231, 222, 1) 30% )
-      top right/300% 200%;
+   rgba(190,228,210,.5) 6.25%,
+   rgba(250,178,172,.6) 20%,
+   rgba(237, 231, 222, 1) 35%,
+   rgba(237, 231, 222, 1) 60% )
+      top right/300% 100%;
       justify-content: center;
     align-items: center;
     font-weight: bold;
